[package]
name = "misscmd"
version = "0.1.0"
authors = ["YuzuRyo61 <yuzuryo61@yuzulia.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
misskey = "0.2.0"
webbrowser = "0.5.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
